trying to fix the content to wrap when squeezed by page

--- a/01_first_react_project/src/App.css
+++ b/01_first_react_project/src/App.css
@@ -138,12 +138,12 @@ body {
 }
 
 .line-space-para{
-    font-size: 1.5vw;
+    font-size: 20px;
     line-height: 1.5;
 }
 
 .javascript-img {
-    min-width: 300px;
+    min-width: 100px;
     padding-top: 10%;
     width: 100%;
     border-radius: 5px;
